--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "particlesjs": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
