--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
+    "framer-motion": "^10.15.2",
     "particles.js": "^2.0.0",
     "particlesjs": "^2.2.3",
     "react": "^18.2.0",
